--- a/src/app.css
+++ b/src/app.css
@@ -9,7 +9,12 @@ body {
 }
 
 section {
-	padding: 2rem 2rem;
+	padding: 4rem 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
 }
 
 h1,
@@ -23,6 +28,10 @@ h6 {
 	letter-spacing: -0.5px;
 	color: white;
 	font-size: 60px;
+}
+
+h3{
+  font-size: 24px;
 }
 
 p {
