--- a/src/app.css
+++ b/src/app.css
@@ -5,6 +5,21 @@ html {
 
 }
 
+.blob-container{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	z-index: -2;
+	width: 100vw;
+}
+
+@media (max-width: 899px) {
+	.blob-container{
+
+		overflow: hidden;
+	}}
+
 body {
 	font-family: 'Roboto', sans-serif;
 
@@ -30,7 +45,7 @@ h6 {
 	letter-spacing: -0.5px;
 	color: white;
 	font-size: 60px;
-	
+
 }
 
 h3{
