--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
 html {
 	background-color: #0b0e2f;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-family: 'M PLUS Rounded 1c','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 
 }
@@ -21,7 +21,7 @@ html {
 	}}
 
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family: "Roboto", sans-serif;
 
 }
 
@@ -40,11 +40,12 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Aldrich';
+	font-family: "M PLUS Rounded 1c", sans-serif;
 	line-height: 120%;
 	letter-spacing: -0.5px;
 	color: white;
 	font-size: 60px;
+	font-weight: 300;
 
 }
 
@@ -53,7 +54,7 @@ h3{
 }
 
 p {
-	color: white;
+	color: #FFFFFFB2;
 	line-height: 120%;
 	letter-spacing: 0.17px;
 	font-weight: 300;
