--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,14 @@
 html {
 	background-color: #0b0e2f;
 	font-family: 'M PLUS Rounded 1c', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	max-width: 1990px;
+	margin-left: auto;
+	margin-right: auto;
+	
+}
+main{
+	position: relative;
+    overflow: hidden;
 }
 
 .blob-container {
@@ -8,7 +16,7 @@ html {
 	align-items: center;
 	justify-content: center;
 	position: absolute;
-	z-index: -2;
+	z-index: -1;
 	width: 100vw;
 }
 
